refactor: replace hardcoded texts and sizes with string and dimens xml resources

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -10,9 +10,9 @@
         android:id="@+id/etLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:minHeight="50dp"
+        android:minHeight="@dimen/min_height_et"
         android:gravity="center"
-        android:hint="Введите логин"
+        android:hint="@string/login_et"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/etPassword"
         app:layout_constraintStart_toStartOf="@+id/etPassword"
@@ -22,10 +22,10 @@
         android:id="@+id/etEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:minHeight="50dp"
+        android:minHeight="@dimen/min_height_et"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:hint="Электронная почта"
+        android:hint="@string/email_et"
         app:layout_constraintEnd_toEndOf="@+id/etPassword"
         app:layout_constraintStart_toStartOf="@+id/etPassword"
         app:layout_constraintTop_toBottomOf="@+id/etLogin" />
@@ -34,10 +34,10 @@
         android:id="@+id/etPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:minHeight="50dp"
+        android:minHeight="@dimen/min_height_et"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:hint="Введите пароль"
+        android:hint="@string/pas_et"
         app:layout_constraintEnd_toEndOf="@+id/registerBtn"
         app:layout_constraintStart_toStartOf="@+id/registerBtn"
         app:layout_constraintTop_toBottomOf="@+id/etEmail" />
@@ -46,10 +46,10 @@
         android:id="@+id/etConfirmPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:minHeight="50dp"
+        android:minHeight="@dimen/min_height_et"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:hint="Повторите пароль"
+        android:hint="@string/confirm_pas_et"
         app:layout_constraintEnd_toEndOf="@+id/registerBtn"
         app:layout_constraintStart_toStartOf="@+id/registerBtn"
         app:layout_constraintTop_toBottomOf="@+id/etPassword" />
@@ -59,8 +59,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:minWidth="200dp"
-        android:text="Зарегистрироваться"
+        android:minWidth="@dimen/min_width_btn"
+        android:text="@string/register_btn"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
