--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="text_size">18sp</dimen>
     <dimen name="min_height_et">50dp</dimen>
     <dimen name="min_width_btn">200dp</dimen>
+
+    <dimen name="test_wrapper_text_size">32sp</dimen>
 </resources>
