--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -10,13 +10,14 @@
         android:id="@+id/etLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:minHeight="@dimen/min_height_et"
         android:gravity="center"
         android:hint="@string/login_et"
+        android:minHeight="@dimen/min_height_et"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/etPassword"
         app:layout_constraintStart_toStartOf="@+id/etPassword"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/etEmail"
