--- a/app/src/main/res/layout/video_content_item.xml
+++ b/app/src/main/res/layout/video_content_item.xml
@@ -27,11 +27,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/author_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="52dp"
                     android:src="@drawable/ic_launcher_foreground" />
 
                 <TextView
+                    android:id="@+id/author_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tinkoff_Journal"
@@ -40,12 +42,14 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/tv_text_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Описание видоса. Если его нет, то оно не должно отображаться"
                 android:textSize="@dimen/text_size"/>
 
             <ImageView
+                android:id="@+id/item_video_holder"
                 android:layout_width="wrap_content"
                 android:layout_height="300dp"
                 android:src="@drawable/kot"/>
