feat: add recycler view

--- a/app/src/main/res/layout/fragment_news_feed.xml
+++ b/app/src/main/res/layout/fragment_news_feed.xml
@@ -41,5 +41,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
