--- a/app/src/main/res/layout/video_content_item.xml
+++ b/app/src/main/res/layout/video_content_item.xml
@@ -36,6 +36,7 @@
                     android:id="@+id/author_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:text="Tinkoff_Journal"
                     android:textSize="@dimen/text_size"/>
 
@@ -59,15 +60,44 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <androidx.appcompat.widget.AppCompatButton
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Like"/>
+                    android:orientation="horizontal">
 
-                <androidx.appcompat.widget.AppCompatButton
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/like_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Likes"/>
+
+                    <TextView
+                        android:id="@+id/tv_likes_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="80"/>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Coment"/>
+                    android:orientation="horizontal"
+                    android:layout_marginStart="16dp">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/comment_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Comments"/>
+
+                    <TextView
+                        android:id="@+id/tv_comments_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="80"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
