refactor: registerFragment_to_loginFragment action

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,7 +32,13 @@
         android:id="@+id/registerFragment"
         android:name="com.example.videoblogmobileclient.presentation.fragments.RegisterFragment"
         android:label="fragment_register"
-        tools:layout="@layout/fragment_register" />
+        tools:layout="@layout/fragment_register" >
+        <action
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpToInclusive="true"
+            app:popUpTo="@id/registerFragment"/>
+    </fragment>
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.videoblogmobileclient.presentation.fragments.LoginFragment"
@@ -42,7 +48,7 @@
             android:id="@+id/action_loginFragment_to_newsFeedFragment"
             app:destination="@id/newsFeedFragment"
             app:popUpToInclusive="true"
-            app:popUpTo="@id/newsFeedFragment"/>
+            app:popUpTo="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/newsFeedFragment"
